[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "torchrdm"
version = "0.0.1"
authors = [
  { name="Xujin Chris Liu", email="xl3942@nyu.edu" },
]
description = "Package to calculate RDM of neural networks"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = "tests/"
log_cli = true
markers = "slow"
addopts = "--durations=0 --strict-markers --doctest-modules"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
